edit PlaceService.java fix getPlaces to get category id